other-vpol/check-serviceaccount-secrets/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-service-accounts
spec:
  # disable templating because it can cause issues with ValidatingPolicy
  template: false
  steps:
  - name: step-01
    try:
    - apply :
        file :  ../check-serviceaccount-secrets.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: ValidatingPolicy
          metadata:
            name: check-serviceaccount-secrets
          spec:
            validationActions:
             - Deny
    - assert:
        file: policy-ready.yaml
    - sleep: 
       duration: 10s
  - name: step-02
    try:
    - apply:
        file: good-svc-account.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-svc-account.yaml
  - name: step-99
    try:
    - delete:
        ref:
          apiVersion: policies.kyverno.io/v1
          kind: ValidatingPolicy
          name: check-serviceaccount-secrets
